--- a/screens/index.html
+++ b/screens/index.html
@@ -14,8 +14,7 @@
             <header>
                 <nav>
                     <div class="navbrand">
-                        <img src="../public/Logo Shape.svg" alt="Logo">
-                        <h1> <a href="./index.html">Boldo</a></h1>
+                        <h1> <a href="./index.html">Prop Pub</a></h1>
                     </div>
                     <div class="NavLinks">
                         <img class="menu" src="../public/menu.svg" alt="menu">
@@ -117,8 +116,7 @@
         <footer>
             <div class="classFooter">
                 <div class="navbrand">
-                    <img src="../public/Logo Shape.svg" alt="Logo">
-                    <h1>Boldo</h1>
+                    <h1> <a href="./index.html">Prop Pub</a></h1>
                 </div>
                 <h2> &copy; All rights reserved</h2>
             </div>
